# Copyright 2025 Predrag Jovanović
# SPDX-FileCopyrightText: 2025 Predrag Jovanović
# SPDX-License-Identifier: Apache-2.0

project('allocator_t', 'c')

allocator_t_dep = declare_dependency(
    include_directories: include_directories('include')
)

meson.override_dependency('allocator_t', allocator_t_dep)
